server add GET /files to list files
