# server/internal/router/router.go
@@ -20,4 +20,6 @@ func initializeRoutes() {
 	files.HandleFunc("", handlers.FilesHandler.BulkUpload).Methods("POST")
 	files.HandleFunc("/", handlers.FilesHandler.BulkUpload).Methods("POST")
 	files.HandleFunc("/{filename:[a-z]+[0-9]+}", handlers.FilesHandler.DownloadByName).Methods("GET")
+	files.HandleFunc("", handlers.FilesHandler.ListNames).Methods("GET")
+	files.HandleFunc("/", handlers.FilesHandler.ListNames).Methods("GET")
 }
